--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -93,14 +93,14 @@
                                 </div>
                                 <div class="header-social-list">
                                     <span>
+                                        <a href="https://github.com/Sabuhi0" class="github">
+                                            <i class="fab fa-github"></i>
+                                        </a>
                                         <a href="https://twitter.com/sabuhi0" class="twitter" target="_blank">
                                             <i class="fab fa-twitter"></i>
                                         </a>
-                                         <a href="https://www.facebook.com/gasimov0/" class="facebook" target="_blank">
+                                        <a href="https://www.facebook.com/gasimov0/" class="facebook" target="_blank">
                                             <i class="fab fa-facebook-f"></i>
-                                        </a>
-                                        <a href="https://www.instagram.com/sabuhigasimov/?hl=en" class="instagram" target="_blank">
-                                            <i class="fab fa-instagram"></i>
                                         </a>
                                     </span>
                                 </div>
@@ -257,7 +257,7 @@
                     {% for project in projects%}
 
                     <div class="col-md-6 work-section">
-                        <a href="{{project.project_url}}">
+                        <a href="{{project.project_url}}" target="_blank">
                             <div class="work-section-items">
                                 <img src="{{project.project_img}}" alt="Avatar" class="image">
                                 <div class="overlay-item">
@@ -369,16 +369,16 @@
                             <h1 class="mt-4">Məni izləyin</h1>
                             <div class="social-list mt-20">
                                 <span>
-                                <a href="https://github.com/Sabuhi0" class="github">
+                                <a href="https://github.com/Sabuhi0" class="github" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="https://www.facebook.com/gasimov0/" class="facebook">
+                                <a href="https://www.facebook.com/gasimov0/" class="facebook" target="_blank">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
-                                <a href="https://www.instagram.com/sabuhigasimov/?hl=en" class="instagram">
+                                <a href="https://www.instagram.com/sabuhigasimov/?hl=en" class="instagram" target="_blank">
                                     <i class="fab fa-instagram"></i>
                                 </a>
-                                <a href="https://twitter.com/sabuhi0" class="twitter">
+                                <a href="https://twitter.com/sabuhi0" class="twitter" target="_blank">
                                     <i class="fab fa-twitter"></i>
                                 </a>
                             </span>
