--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -96,8 +96,8 @@
                                         <a href="https://github.com/Sabuhi0" class="github">
                                             <i class="fab fa-github"></i>
                                         </a>
-                                        <a href="https://twitter.com/sabuhi0" class="twitter" target="_blank">
-                                            <i class="fab fa-twitter"></i>
+                                        <a href="https://www.instagram.com/sabuhigasimov/?hl=en" class="instagram" target="_blank">
+                                            <i class="fab fa-instagram"></i>
                                         </a>
                                         <a href="https://www.facebook.com/gasimov0/" class="facebook" target="_blank">
                                             <i class="fab fa-facebook-f"></i>
