--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -309,7 +309,7 @@
                         <small>Baku</small>
                     </div>
                     <div class="fb-slide-content text-center">
-                        <p>Sabuhi Azərbaycanda proqramlaşdırmanın talehini dəyişəcək potensiyalı olan həm kod həvəsinə, həm götürmə qabiliyətinə, həm istedadına malik pure cavan kadrdır. Mən çox inanıram ki, bu oğlanın önü çox açığdı düzgün istiqamət verilsə.</p>
+                        <p>Sabuhi Azərbaycanda proqramlaşdırmanın talehini dəyişəcək potensiyalı olan həm kod həvəsinə, həm götürmə qabiliyətinə, həm istedadına malik pure cavan kadirdır. Mən çox inanıram ki, bu oğlanın önü çox açığdı düzgün istiqamət verilsə.</p>
                     </div>
                 </div>
                 {%for feedback in feedbacks%}
