Add color switcher

--- a/static/assets/css/common.css
+++ b/static/assets/css/common.css
@@ -203,7 +203,7 @@ html {
 }
 
 ::selection {
-    background: #20c997;
+    background: var(--color-mountain-meadow);
     color: var(--color-white);
 }
 
