--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -50,6 +50,26 @@
         <button type="button" id="btn-back-to-top"><i class="fas fa-chevron-up"></i></button>
     </div>
     <main id="home">
+        <!-- Color Switcher Start -->
+        <div class="color-switcher">
+            <div class="switcher-btn">
+                <i class="fas fa-cog"></i>
+            </div>
+            <h3>select Color</h3>
+            <div class="theme-buttons-container">
+                <span class="theme-buttons" data-color="#8e44ad" style="background: #8e44ad;"></span>
+                <span class="theme-buttons" data-color="#2980b9" style="background: #2980b9;"></span>
+                <span class="theme-buttons" data-color="#f39c12" style="background: #f39c12;"></span>
+                <span class="theme-buttons" data-color="#27ae60" style="background: #27ae60;"></span>
+                <span class="theme-buttons" data-color="#ea2027" style="background: #ea2027;"></span>
+                <span class="theme-buttons" data-color="#e84393" style="background: #e84393;"></span>
+                <span class="theme-buttons" data-color="#ff4757" style="background: #ff4757;"></span>
+                <span class="theme-buttons" data-color="#ffc312" style="background: #ffc312;"></span>
+                <span class="theme-buttons" data-color="#17c0eb" style="background: #17c0eb;"></span>
+            </div>
+        </div>
+        <!-- Color Switcher End -->
+
         <!-- Intro Section Start -->
         <div class="overlay"></div>
         <div class="intro">
