--- a/static/assets/css/intro.css
+++ b/static/assets/css/intro.css
@@ -1,6 +1,76 @@
 /* Intro Section Start */
 
 
+/* Color Switcher */
+
+.color-switcher {
+    font-family: "ReadexProRegular";
+    position: fixed;
+    top: 50%;
+    right: -200px;
+    width: 200px;
+    padding: 10px;
+    background: #fff;
+    z-index: 1000;
+    transition: all ease .6s;
+}
+
+.color-switcher.active {
+    right: 0px;
+    transition: all ease .6s;
+}
+
+.color-switcher h3 {
+    color: var(--color-mountain-meadow);
+    font-size: 20px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #3333;
+    padding: 5px 0;
+    text-align: center;
+}
+
+.color-switcher .switcher-btn {
+    position: absolute;
+    top: 0;
+    left: -40px;
+    color: var(--color-white);
+    background: #555;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px 0px 0px 4px;
+    cursor: pointer;
+}
+
+.color-switcher .switcher-btn i {
+    font-size: 20px;
+    animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.color-switcher .theme-buttons-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.color-switcher .theme-buttons-container .theme-buttons {
+    display: block;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    margin: 5px;
+    cursor: pointer;
+}
+
+
 /* Responsive Section Start */
 
 @media only screen and (min-width: 800px) {
