--- a/static/assets/css/services.css
+++ b/static/assets/css/services.css
@@ -28,7 +28,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: white;
+    background: var(--color-white);
     border-radius: 5px;
     padding: 10px 20px;
 }
@@ -70,37 +70,37 @@
 }
 
 .list-groups:hover .fa-python {
-    color: #306998;
+    color: var(--color-azure);
     transition: all .3s ease;
 }
 
 .list-groups:hover .fa-sass {
-    color: #bf4080;
+    color: var(--color-mulberry);
     transition: all .3s ease;
 }
 
 .list-groups:hover .bxl-flask {
-    color: #000000;
+    color: var(--color-cod-gray);
     transition: all .3s ease;
 }
 
 .list-groups:hover .bxl-tailwind-css {
-    color: #38bdf8;
+    color: var(--color-picton-blue);
     transition: all .3s ease;
 }
 
 .list-groups:hover .bxl-github {
-    color: #0d1117;
+    color: var(--color-bunker);
     transition: all .3s ease;
 }
 
 .list-groups:hover .bxl-git {
-    color: #f14e32;
+    color: var(--color-flamingo-100);
     transition: all .3s ease;
 }
 
 .list-groups:hover .bx-data {
-    color: #414141;
+    color: var(--color-tundora);
     transition: all .3s ease;
 }
 
