--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -55,7 +55,7 @@
             <div class="switcher-btn">
                 <i class="fas fa-cog"></i>
             </div>
-            <h3>select Color</h3>
+            <h3>Select Color</h3>
             <div class="theme-buttons-container">
                 <span class="theme-buttons" data-color="#8e44ad" style="background: #8e44ad;"></span>
                 <span class="theme-buttons" data-color="#2980b9" style="background: #2980b9;"></span>
