--- a/static/assets/css/intro.css
+++ b/static/assets/css/intro.css
@@ -27,6 +27,7 @@
     border-bottom: 1px solid #3333;
     padding: 5px 0;
     text-align: center;
+    text-transform: uppercase;
 }
 
 .color-switcher .switcher-btn {
