--- a/static/assets/css/intro.css
+++ b/static/assets/css/intro.css
@@ -7,8 +7,8 @@
     font-family: "ReadexProRegular";
     position: fixed;
     top: 50%;
-    right: -200px;
-    width: 200px;
+    right: -202px;
+    width: 202px;
     padding: 10px;
     background: #fff;
     z-index: 1000;
@@ -48,6 +48,7 @@
 .color-switcher .switcher-btn i {
     font-size: 20px;
     animation: rotate 2s linear infinite;
+    color: var(--color-mountain-meadow);
 }
 
 @keyframes rotate {
