--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -66,6 +66,7 @@
                 <span class="theme-buttons" data-color="#ff4757" style="background: #ff4757;"></span>
                 <span class="theme-buttons" data-color="#ffc312" style="background: #ffc312;"></span>
                 <span class="theme-buttons" data-color="#17c0eb" style="background: #17c0eb;"></span>
+                <span class="theme-buttons" data-color="#20C997" style="background: #20C997;"></span>
             </div>
         </div>
         <!-- Color Switcher End -->
