--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -74,10 +74,9 @@
         <!-- Intro Section Start -->
         <div class="overlay"></div>
         <div class="intro">
-            <!-- <video autoplay loop muted>
-                <source src="/static/video/Laptop-1625.mp4" type="video/mp4">
-            </video> -->
-            <!-- <img width="100%" height="100%" style="object-fit: cover;" src="/static/assets/uploads/desktop.png" alt="desktop"> -->
+            <video autoplay loop muted>
+                <source src="/static/assets/videos/Laptop-3145.mp4" type="video/mp4">
+            </video>
         </div>
         <div class="container">
             <!-- Header Section Start -->
