--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -49,7 +49,7 @@
     <div class="scroll-button">
         <button type="button" id="btn-back-to-top"><i class="fas fa-chevron-up"></i></button>
     </div>
-    <main id="home">
+    <section id="home">
         <!-- Color Switcher Start -->
         <div class="color-switcher">
             <div class="switcher-btn">
@@ -89,10 +89,13 @@
                             </div>
                             <ul class="d-flex header-navbar-menu">
                                 <li>
-                                    <a href="#home">Ana Səhifə</a>
+                                    <a href="#home" class="current">Ana Səhifə</a>
                                 </li>
                                 <li>
                                     <a href="#about">Haqqımda</a>
+                                </li>
+                                <li>
+                                    <a href="#skills">Bacarıqlar</a>
                                 </li>
                                 <li>
                                     <a href="#blog">Blog</a>
@@ -154,7 +157,7 @@
             </a>
         </div>
         <!-- Intro Section End -->
-    </main>
+    </section>
     <section id="about">
         <!-- About Section Start -->
         <div class="about-section pt-7">
