--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -116,7 +116,7 @@
                                     <span class="bar"></span>
                                     <span class="bar"></span>
                                 </div>
-                                <div class="header-social-list">
+                                <div class="header-social-list d-flex align-items-center">
                                     <span>
                                         <a href="https://github.com/Sabuhi0" class="github">
                                             <i class="fab fa-github"></i>
@@ -128,6 +128,9 @@
                                             <i class="fab fa-facebook-f"></i>
                                         </a>
                                     </span>
+                                    <div class="darkBtn">
+                                        <img src="/static/assets/darkThemeIcon/sun.png" alt="">
+                                    </div>
                                 </div>
                             </div>
                         </nav>
