--- a/static/assets/css/blog.css
+++ b/static/assets/css/blog.css
@@ -1,27 +1,48 @@
 /* Blog Section Start */
 
-.blog-item img {
-    opacity: 0.8;
-    transition: all 0.4s ease;
+.blog-image {
+    overflow: hidden;
 }
 
-.blog-item img:hover {
+.blog-image .image {
+    height: 250px;
+    width: 100%;
+    object-fit: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.8;
+    transition: all .5s;
+}
+
+.blog-item:hover .blog-image .image,
+.blog-item:focus .blog-image .image {
     opacity: 1;
+    transform: scale(1.2);
+}
+
+.blog-item:hover .blog-texts h1 {
+    transition: all .3s ease;
+    color: var(--color-mountain-meadow);
+    text-decoration: underline;
 }
 
 .blog-item h1 {
+    margin-top: 10px;
+}
+
+.blog-item h1 a {
     font-family: "ReadexProRegular";
     font-size: 20px;
     color: var(--color-mine-shaft);
-    margin-top: 10px;
-    margin-bottom: 15px;
+    line-height: 1.3;
+    color: inherit;
 }
 
 .blog-item h5 {
     font-family: "ReadexProLight";
     font-size: 14px;
     color: var(--color-mine-shaft-100);
-    padding-bottom: 15px;
+    padding-top: 15px;
 }
 
 
