--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -254,7 +254,7 @@
             <div class="container">
                 <div class="row">
                     {%for blog in blogs%}
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-lg-4 col-sm-12">
                         <div class="blog-item">
                             <div class="blog-image">
                                 <a href="{{blog.blog_url}}" target="_blank"><img src="{{blog.blog_img}}" alt="blog--img" class="image"></a>
