Commit darkBtn class name

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -129,9 +129,9 @@
                                             <i class="fab fa-facebook-f"></i>
                                         </a>
                                     </span>
-                                    <div class="darkBtn">
+                                    <!-- <div class="darkBtn">
                                         <img src="/static/assets/darkThemeIcon/sun.png" alt="">
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </nav>
