--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -140,17 +140,17 @@
             </header>
             <div class="intro-position-center text-center">
                 <div class="header-content-text">
-                    <h3>Xoş gəldiniz</h3>
+                    <h3>Welcome</h3>
                 </div>
                 <div id="text" class="header-content-repot">
-                    <p>Mən <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+                    <p>I'm <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
                 </div>
                 <div class="header-content-subtitle">
-                    <p>Azərbaycanda, Bakıda yerləşir.</p>
+                    <p>based in Azerbaijan,Baku.</p>
                 </div>
                 <div class="header-content-button">
                     <a href="#contact">
-                        <button type="button" class="btn">Əlaqə üçün</button>
+                        <button type="button" class="btn">Hire Me</button>
                     </a>
                 </div>
             </div>
