--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -167,9 +167,9 @@
         <div class="about-section pt-7">
             <!-- Heading Section Start -->
             <div class="header-text position-relative mb-80">
-                <h2 class="text-center">Haqqımda</h2>
+                <h2 class="text-center">About Me</h2>
                 <p class="position-center text-center">
-                    Məni Daha çox tanıyın
+                    Know Me More
                     <span class="heading-separator-line border-bottom d-block mx-auto"></span>
                 </p>
             </div>
@@ -177,27 +177,27 @@
             <div class="container">
                 <div class="row mt-4">
                     <div class="col-md-8 about-information">
-                        <h1>Mən <span>Səbuhi Qasımov,</span> Veb Proqramçıyam</h1>
+                        <h1>I'm <span>Sabuhi Gasimov,</span> a Web Developer</h1>
                         <p>{{prof.about}}</p>
                     </div>
                     <div class="col-md-4">
                         <div class="list">
                             <ul>
                                 <li>
-                                    <span>Ad:</span> {{prof.profile_name}}
+                                    <span>Name:</span> {{prof.profile_name}}
                                 </li>
                                 <li>
                                     <span>Email:</span> <a href="https://sabuhiq0@gmail.com" target="_blank">{{prof.profile_email}}</a>
                                 </li>
                                 <li>
-                                    <span>Yaş:</span> {{prof.profile_age}}
+                                    <span>Age:</span> {{prof.profile_age}}
                                 </li>
                                 <li>
-                                    <span>From:</span>Lahıc,Ismayıllı,Azərbaycan
+                                    <span>From:</span>Lahij, Ismailli, Azerbaijan
                                 </li>
                             </ul>
                             <div class="admin-contact-button">
-                                <button class="send" type="submit">CV'ni yüklə</button>
+                                <button class="send" type="submit">Download CV</button>
                             </div>
                         </div>
                     </div>
