Change the text language of the skills section

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -211,9 +211,9 @@
         <div class="section">
             <!-- Heading Section Start -->
             <div class="header-text position-relative">
-                <h2 class="text-center">Bacarıqlar</h2>
+                <h2 class="text-center">Skills</h2>
                 <p class="position-center text-center">
-                    Mən nə edirəm?
+                    What I Do?
                     <span class="heading-separator-line border-bottom d-block mx-auto"></span>
                 </p>
             </div>
