Change the text language of the portfolio heading section

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -277,9 +277,9 @@
             <div class="container">
                 <!-- Heading Section Start -->
                 <div class="header-text position-relative mb-4">
-                    <h2 class="text-center">Layihələrim</h2>
+                    <h2 class="text-center">Portfolio</h2>
                     <p class="position-center text-center">
-                        Mənim İşim
+                        My Work
                         <span class="heading-separator-line border-bottom d-block mx-auto"></span>
                     </p>
                 </div>
