Change the text language of the feedbacks heading section

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -315,7 +315,7 @@
             <div class="header-text position-relative mb-6">
                 <h2 class="text-center">Feedbacks</h2>
                 <p class="position-center text-center">
-                    Rəylər
+                    Client Speak
                     <span class="heading-separator-line border-bottom d-block mx-auto"></span>
                 </p>
             </div>
