Change the text language of the contact section

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -375,9 +375,9 @@
         <div class="section">
             <!-- Heading Section Start -->
             <div class="header-text position-relative mb-5">
-                <h2 class="text-center">Əlaqə</h2>
+                <h2 class="text-center">Contact</h2>
                 <p class="position-center text-center">
-                    Əlaqə üçün
+                    Get in Touch
                     <span class="heading-separator-line border-bottom d-block mx-auto"></span>
                 </p>
             </div>
@@ -397,7 +397,7 @@
                             </p>
                         </div>
                         <div class="follow-me mt-20">
-                            <h1 class="mt-4">Məni izləyin</h1>
+                            <h1 class="mt-4">Follow me</h1>
                             <div class="social-list mt-20">
                                 <span>
                                     <a href="https://github.com/Sabuhi0" class="github" target="_blank">
@@ -417,15 +417,15 @@
                         </div>
                     </div>
                     <div class="col-md-9 col-md-1 admin-contact mt-4">
-                        <h1>Bizə Qeyd Göndərin</h1>
+                        <h1>Send us a note</h1>
                         <div class="form">
                             <form action="/admin/contact" method="POST" enctype="multipart/form-data">
                                 <div class="display-flex display-block">
-                                    <input class="input mr-15" name="contact_name" required type="text" placeholder="Adı" aria-label="Username">
+                                    <input class="input mr-15" name="contact_name" required type="text" placeholder="Name" aria-label="Username">
                                     <input class="input" name="contact_email" type="email" placeholder="Email" aria-label="Server">
                                 </div>
                                 <div class="mesaj_input">
-                                    <textarea class="input" type="text" name="contact_message" placeholder="Ehtiyaclarınız haqqında bizə ətraflı məlumat verin......." rows="4"></textarea>
+                                    <textarea class="input" type="text" name="contact_message" placeholder="Tell us more about your needs......" rows="4"></textarea>
                                 </div>
                                 <div class="admin-contact-button text-center ">
                                     <button class="send " type="submit ">Göndər</button>
