--- a/static/assets/css/contact.css
+++ b/static/assets/css/contact.css
@@ -30,7 +30,7 @@
     font-family: "ReadexProRegular", sans-serif;
     color: var(--color-cod-gray);
     font-size: 20px;
-    /* text-transform: uppercase; */
+    text-transform: uppercase;
 }
 
 .address-section p,
@@ -110,6 +110,7 @@ textarea {
     color: var(--color-cod-gray);
     font-size: 20px;
     margin-bottom: 18px;
+    text-transform: uppercase;
 }
 
 .send {
