--- a/static/assets/css/intro.css
+++ b/static/assets/css/intro.css
@@ -4,7 +4,6 @@
 /* Color Switcher */
 
 .color-switcher {
-    font-family: "ReadexProRegular";
     position: fixed;
     top: 50%;
     right: -202px;
@@ -95,14 +94,15 @@
         display: none;
     }
     .header-content-repot p {
-        font-family: "ReadexProBold";
+        /* font-family: "ReadexProBold"; */
+        font-weight: 600 !important;
         font-size: 64px;
         color: var(--color-white);
         padding-top: 10px;
         overflow: hidden;
     }
     .header-content-text h3 {
-        font-family: "ReadexProRegular";
+        font-weight: 500 !important;
         font-size: 32px;
         color: var(--color-white);
         margin-bottom: 20px;
@@ -150,14 +150,14 @@
         animation: blink 1s infinite;
     }
     .header-content-repot p {
-        font-family: "ReadexProBold";
+        /* font-family: "ReadexProBold"; */
+        font-weight: 600 !important;
         font-size: 34px;
         color: var(--color-white);
         padding-top: 10px;
         overflow: hidden;
     }
     .header-content-text h3 {
-        font-family: "ReadexProRegular";
         font-size: 25px;
         color: var(--color-white);
         margin-bottom: 20px;
@@ -192,7 +192,6 @@
 }
 
 .header-content-subtitle p {
-    font-family: "ReadexProRegular";
     font-size: 22px;
     color: var(--color-geyser);
     margin-top: 1rem;
@@ -211,7 +210,7 @@
 }
 
 .header-navbar-name h1 {
-    font-family: "ReadexProRegular";
+    font-weight: 700 !important;
     font-size: 32px;
     font-weight: 700;
     color: var(--color-white);
@@ -222,7 +221,7 @@
 }
 
 .header-navbar-menu li a {
-    font-family: "ReadexProLight";
+    /* font-family: "ReadexProLight"; */
     color: var(--color-white);
     font-size: 16px;
     padding: 1.3rem;
@@ -326,7 +325,7 @@
 }
 
 .btn {
-    font-family: "ReadexProLight";
+    /* font-family: "ReadexProLight"; */
     padding: .7rem 2.3rem;
     border-radius: 2rem;
     color: var(--color-mountain-meadow);
