--- a/static/assets/css/contact.css
+++ b/static/assets/css/contact.css
@@ -113,7 +113,8 @@ textarea {
 }
 
 .send {
-    font-family: "ReadexProMedium";
+    /* font-family: "ReadexProMedium"; */
+    font-weight: 500 !important;
     font-size: 16px;
     padding: 1rem 2.3rem;
     background-color: var(--color-mountain-meadow);
