--- a/static/assets/css/blog.css
+++ b/static/assets/css/blog.css
@@ -31,7 +31,8 @@
 }
 
 .blog-item h1 a {
-    font-family: "ReadexProRegular";
+    /* font-family: "ReadexProRegular"; */
+    font-weight: 600 !important;
     font-size: 20px;
     color: var(--color-mine-shaft);
     line-height: 1.3;
@@ -39,7 +40,8 @@
 }
 
 .blog-item h5 {
-    font-family: "ReadexProLight";
+    /* font-family: "ReadexProLight"; */
+    font-weight: 400 !important;
     font-size: 14px;
     color: var(--color-mine-shaft-100);
     padding-top: 15px;
