--- a/static/assets/css/feedbacks.css
+++ b/static/assets/css/feedbacks.css
@@ -85,13 +85,15 @@
 }
 
 .fb-slide-title h1 {
-    font-family: "ReadexProRegular";
+    /* font-family: "ReadexProRegular"; */
+    font-weight: 600 !important;
     font-size: 22px;
     margin-bottom: 5px;
 }
 
 .fb-slide-from small {
-    font-family: "ReadexProLight";
+    /* font-family: "ReadexProLight"; */
+    font-weight: 400 !important;
     font-size: 14px;
 }
 
@@ -102,7 +104,8 @@
 
 .fb-slide-content p {
     width: 70%;
-    font-family: "ReadexProSemiBold";
+    /* font-family: "ReadexProSemiBold"; */
+    font-weight: 500 !important;
     font-size: 18px;
     margin-bottom: 20px;
     line-height: 1.4;
