--- a/static/assets/css/common.css
+++ b/static/assets/css/common.css
@@ -134,7 +134,7 @@ table {
 * {
     box-sizing: border-box;
     list-style-type: none;
-    text-decoration: none;
+    text-decoration: none !important;
 }
 
 
