Add button portfolios section

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -296,8 +296,13 @@
                                 <div class="overlay-item">
                                     <div class="item-text">
                                         <h1><span>{{project.project_name}}</span></h1>
-                                        <div class="developer">
-                                            <p>{{project.project_detail}}</p>
+                                        <div class="work-btns d-flex gap-3 mt-4">
+                                            <a href="#" class="work-btn">
+                                                <span><i class="fa-solid fa-eye "></i></span>
+                                            </a>
+                                            <a href="#" class="work-btn">
+                                                <span><i class="fab fa-github"></i></span>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
