--- a/static/assets/css/work.css
+++ b/static/assets/css/work.css
@@ -1,72 +1,86 @@
-/* My Work Section Start */
-
-#work {
-    margin-top: 5rem;
-}
-
-.work-section {
-    padding-top: 40px;
-}
-
-.work-section-items {
-    position: relative;
-}
-
-.image {
-    width: 100%;
-    border-radius: 4px;
-    filter: blur(0px);
-    opacity: 1;
-}
-
-.overlay-item {
-    position: absolute;
-    top: 0;
-    bottom: 2px;
-    left: 0;
-    right: 0;
-    opacity: 0;
-    transition: all .6s ease;
-    background: rgba(0, 0, 0, 0.8);
-    border-radius: 4px;
-}
-
-.work-section-items:hover .overlay-item {
-    opacity: 1;
-    filter: blur(0px);
-}
-
-.work-section-items:hover img {
-    filter: blur(1px);
-}
-
-.item-text {
-    /* font-family: "ReadexProRegulart"; */
-    color: var(--color-white);
-    font-size: 25px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-.item-text h1 span {
-    font-weight: 600 !important;
-    /* font-family: "ReadexProSemiBold"; */
-    color: var(--color-mountain-meadow)
-}
-
-.item-text p {
-    /* font-family: "ReadexProRegular"; */
-    font-size: 18px;
-    margin-top: 1.3rem;
-}
-
-.developer {
-    /* font-family: "ReadexProRegular"; */
-    color: var(--color-white);
-}
-
-
-/* My Work Section End */
+    /* My Work Section Start */
+    
+    #work {
+        margin-top: 5rem;
+    }
+    
+    .work-section {
+        padding-top: 40px;
+    }
+    
+    .work-section-items {
+        position: relative;
+    }
+    
+    .image {
+        width: 100%;
+        border-radius: 4px;
+        filter: blur(0px);
+        opacity: 1;
+    }
+    
+    .overlay-item {
+        position: absolute;
+        top: 0;
+        bottom: 2px;
+        left: 0;
+        right: 0;
+        opacity: 0;
+        transition: all .6s ease;
+        background: rgba(0, 0, 0, 0.8);
+        border-radius: 4px;
+    }
+    
+    .work-section-items:hover .overlay-item {
+        opacity: 1;
+        filter: blur(0px);
+    }
+    
+    .work-section-items:hover img {
+        filter: blur(1px);
+    }
+    
+    .item-text {
+        /* font-family: "ReadexProRegulart"; */
+        color: var(--color-white);
+        font-size: 25px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+    
+    .item-text h1 span {
+        font-weight: 600 !important;
+        /* font-family: "ReadexProSemiBold"; */
+        color: var(--color-mountain-meadow);
+    }
+    
+    .item-text p {
+        /* font-family: "ReadexProRegular"; */
+        font-size: 18px;
+        margin-top: 1.3rem;
+    }
+    
+    .work-btn {
+        /* font-family: "ReadexProRegular"; */
+        width: 120px;
+        height: 55px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: 500;
+        border-width: 4px;
+        border: 2px solid var(--color-white) !important;
+        -webkit-transition: all 0.5s ease;
+        transition: all 0.5s ease;
+        border-radius: 2px!important;
+        color: var(--color-white);
+    }
+    
+    .work-btn:hover {
+        background: var(--color-white) !important;
+        color: var(--color-mountain-meadow) !important;
+    }
+    /* My Work Section End */
