Rename label admin project section

--- a/templates/admin/project.html
+++ b/templates/admin/project.html
@@ -8,11 +8,11 @@
                 <input type="text" name="project_name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
             </div>
             <div class="form-group mt-3">
-                <label class="text-light">Project Detail</label>
+                <label class="text-light">Project View Url</label>
                 <input type="text" name="project_detail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
             </div>
             <div class="form-group mt-3">
-                <label class="text-light">Project Url</label>
+                <label class="text-light">Project Github Url</label>
                 <input type="text" name="project_url" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
             </div>
             <div class="form-group mt-3">
