Add view and github url project section

--- a/templates/admin/update_project.html
+++ b/templates/admin/update_project.html
@@ -8,12 +8,12 @@
                 <input type="text" name="project_name" value="{{newProject.project_name}}" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
             </div>
             <div class="form-group mt-3">
-                <label class="text-light">Project Detail</label>
-                <input type="text" name="project_detail" value="{{newProject.project_detail}}" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+                <label class="text-light">Project View Url</label>
+                <input type="text" name="project_view_url" value="{{newProject.project_view_url}}" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
             </div>
             <div class="form-group mt-3">
-                <label class="text-light">Project Url</label>
-                <input type="text" name="project_url" value="{{newProject.project_url}}" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+                <label class="text-light">Project Github Url</label>
+                <input type="text" name="project_github_url" value="{{newProject.project_github_url}}" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
             </div>
             <div class="submit_button">
                 <span></span>
