--- a/templates/admin/project.html
+++ b/templates/admin/project.html
@@ -9,11 +9,11 @@
             </div>
             <div class="form-group mt-3">
                 <label class="text-light">Project View Url</label>
-                <input type="text" name="project_detail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+                <input type="text" name="project_view_url" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
             </div>
             <div class="form-group mt-3">
                 <label class="text-light">Project Github Url</label>
-                <input type="text" name="project_url" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+                <input type="text" name="project_github_url" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
             </div>
             <div class="form-group mt-3">
                 <input type="file" name="project_img" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
@@ -31,8 +31,8 @@
                     <tr>
                         <th scope="col">#</th>
                         <th scope="col">Project Name</th>
-                        <th scope="col">Project Detail</th>
-                        <th scope="col">Project Url</th>
+                        <th scope="col">Project View Url</th>
+                        <th scope="col">Project Github Url</th>
                         <th scope="col">Update</th>
                         <th scope="col">Delete</th>
                     </tr>
@@ -42,8 +42,8 @@
                     <tr>
                         <td>{{project.id}}</td>
                         <td>{{project.project_name}}</td>
-                        <td>{{project.project_detail}}</td>
-                        <td>{{project.project_url}}</td>
+                        <td><a href="{{project.project_view_url}}" target="_blank">{{project.project_view_url}}</a></td>
+                        <td><a href="{{project.project_github_url}}" target="_blank">{{project.project_github_url}}</a></td>
                         <td><a href="/projectEdit/{{project.id}}"><i class="far fa-edit" style="color: #20C997;"></i></a></td>
                         <td><a href="/projectDelete/{{project.id}}"><i class="far fa-trash-alt" style="color: #20C997;"></i></a></td>
                     </tr>
