--- a/static/assets/css/work.css
+++ b/static/assets/css/work.css
@@ -65,12 +65,12 @@
     
     .work-btn {
         /* font-family: "ReadexProRegular"; */
-        width: 120px;
-        height: 55px;
+        padding: .8rem 2.5rem;
         display: flex;
         align-items: center;
         justify-content: center;
         font-weight: 500;
+        font-size: 20px;
         border-width: 4px;
         border: 2px solid var(--color-white) !important;
         -webkit-transition: all 0.5s ease;
