Initial resume css file

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -28,6 +28,8 @@
     <link rel="stylesheet" href="/static/assets/css/about.css">
     <!--=============== SERVICES ===============-->
     <link rel="stylesheet" href="/static/assets/css/services.css">
+    <!--=============== RESUME ===============-->
+    <link rel="stylesheet" href="/static/assets/css/resume.css">
     <!--=============== WORK ===============-->
     <link rel="stylesheet" href="/static/assets/css/work.css">
     <!--=============== FEEDBACKS ===============-->
