--- a/static/assets/css/intro.css
+++ b/static/assets/css/intro.css
@@ -35,6 +35,7 @@
     left: -40px;
     color: var(--color-white);
     background: #555;
+    box-shadow: 0 0.2rem 0.8rem rgb(0 0 0 / 16%);
     width: 40px;
     height: 40px;
     display: flex;
