--- a/static/assets/css/services.css
+++ b/static/assets/css/services.css
@@ -107,6 +107,11 @@
     transition: all .3s ease;
 }
 
+.list-icon {
+    box-shadow: 0 0.300rem 0.80rem rgba(0,0,0,.1);
+    align-self: flex-start;
+}
+
 .item {
     padding-left: 20px;
 }
