Add resume heading section

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -103,6 +103,9 @@
                                     <a href="#skills">What I Do</a>
                                 </li>
                                 <li>
+                                    <a href="#resume">Resume</a>
+                                </li>
+                                <li>
                                     <a href="#blog">Blog</a>
                                 </li>
                                 <li>
@@ -241,6 +244,19 @@
             </div>
         </div>
         <!-- What I do Section End -->
+    </section>
+    <section id="resume">
+        <div class="resume-section pt-7">
+            <!-- Heading Section Start -->
+            <div class="header-text position-relative mb-6">
+                <h2 class="text-center">Summary</h2>
+                <p class="position-center text-center">
+                    Resume
+                    <span class="heading-separator-line border-bottom d-block mx-auto"></span>
+                </p>
+            </div>
+            <!-- Heading Section End -->
+        </div>
     </section>
     <section id="blog">
         <div class="blog-section pt-7">
