--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -363,7 +363,7 @@
                         <small>Baku</small>
                     </div>
                     <div class="fb-slide-content text-center">
-                        <p>Sabuhi Azərbaycanda proqramlaşdırmanın talehini dəyişəcək potensiyalı olan həm kod həvəsinə, həm götürmə qabiliyətinə, həm istedadına malik pure cavan kadirdır. Mən çox inanıram ki, bu oğlanın önü çox açığdı düzgün istiqamət verilsə.</p>
+                        <p>Səbuhi Azərbaycanda proqramlaşdırmanın talehini dəyişəcək potensiyalı olan həm kod həvəsinə, həm götürmə qabiliyətinə, həm istedadına, malik pure cavan kadırdı. Uğurlar arzulayıram!</p>
                     </div>
                 </div>
                 {%for feedback in feedbacks%}
