Add resume my education section design

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -256,6 +256,24 @@
                 </p>
             </div>
             <!-- Heading Section End -->
+            <!-- Resume Section Start -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 resume-section">
+                        <h1 class="mb-4">My Education</h1>
+                        <div class="resume-item">
+                            <h2>2021 - ...</h2>
+                            <h1>Pragmatech Education & Development Center</h1>
+                            <span>Web-Development</span>
+                            <p>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 resume-section">
+                        <h1 class="mb-4">My Experience</h1>
+                    </div>
+                </div>
+            </div>
+            <!-- Resume Section End -->
         </div>
     </section>
     <section id="blog">
