--- a/static/assets/css/resume.css
+++ b/static/assets/css/resume.css
@@ -1,1 +1,42 @@
 /* Resume Section Start */
+
+.resume-section h1 {
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.resume-item {
+    padding: 1.5rem!important;
+    border: 1px solid #dedede;
+    border-radius: .25rem!important;
+}
+
+.resume-item h2 {
+    display: inline-block;
+    padding: 0.35em 0.65em;
+    margin-bottom: 16px;
+    background-color: var(--color-mountain-meadow);
+    color: var(--color-white);
+    font-size: 14px;
+    border-radius: .25rem;
+}
+
+.resume-item h1 {
+    font-size: 21px !important;
+    color: #252b33;
+    font-weight: 500 !important;
+    margin-bottom: 12px;
+    line-height: 1.4;
+}
+
+.resume-item span {
+    color: rgb(220,53,69);
+}
+
+.resume-item p {
+    margin-top: 20px;
+    color: var(--color-cape-cod);
+    line-height: 1.8;
+}
+
+/* Resume Section End */
