--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -263,9 +263,9 @@
                         <h1 class="mb-4">My Education</h1>
                         <div class="resume-item">
                             <h2>2021 - ...</h2>
-                            <h1>Pragmatech Education & Development Center</h1>
-                            <span>Web-Development</span>
-                            <p>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
+                            <h1>Web-Development</h1>
+                            <span>Pragmatech Education & Development Center</span>
+                            <!-- <p>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p> -->
                         </div>
                     </div>
                     <div class="col-md-6 resume-section">
